# kafka-cdc-realtime-pipeline

./: .env.example  README.md  pyproject.toml  requirements.txt
consumers/: cdc_consumer.py  stream_processor.py
docker/: Dockerfile  docker-compose.yml  init.sql
kafka/connectors/: bigquery-sink-connector.json  postgres-cdc-connector.json
terraform/: main.tf
tests/: test_alerts.py  test_cdc_consumer.py  test_stream_processor.py
