[build-system]
requires = ["setuptools>=68","wheel"]
build-backend = "setuptools.backends.legacy:build"
[project]
name = "rt-stock-monitor"
version = "1.0.0"
description = "Real-time stock monitoring and alert system"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name="Jaimin Babariya",email="jaiminbabariya7@gmail.com"}]
keywords = ["python","flask","gcp","pubsub","bigquery"]
[project.optional-dependencies]
dev = ["pytest>=7.4","pytest-cov>=4.1","black>=23.0","flake8>=6.1"]
[tool.black]
line-length = 100
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
